# simple-platformer-project

./: CMakeLists.txt  LICENSE  Readme.md  assets.h  globals.h  graphics.h  level.h  platformer.cpp  player.h  vcpkg.json
